# To-Do

./: README.md
django-todo-react/: pyproject.toml
django-todo-react/backend/backend/: settings.py
django-todo-react/backend/todo/migrations/: 0001_initial.py
django-todo-react/frontend/: package-lock.json  package.json
